src/main/fabric8/service.yml
# Lab 04
apiVersion: v1
kind: Service
metadata:
  name: ${project.artifactId}
  labels:
    expose: "true"
    group: ${project.groupId}
    project: ${project.artifactId}
    version: ${project.version}
    provider: fabric8
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  type: ClusterIP
