src/main/fabric8/route.yml
# Lab 04
apiVersion: v1
kind: Route
metadata:
  labels:
    expose: 'true'
    group: ${project.groupId}
    project: ${project.artifactId}
    version: ${project.version}
    provider: fabric8
  name: ${project.artifactId}
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: ${project.artifactId}
    weight: 100
  wildcardPolicy: None
